--- a/stm32-smolmatrix/Makefile
+++ b/stm32-smolmatrix/Makefile
@@ -21,4 +21,4 @@ OPENCM3_DIR=../libopencm3
 #include $(OPENCM3_DIR)/mk/genlink-config.mk
 include ../rules.mk
 #include $(OPENCM3_DIR)/mk/genlink-rules.mk
-
+LDFLAGS += -Wl,--print-memory-usage
